upgrade remaining projects to .NET Core 2.0 / VS2017-style csproj

--- a/src/Landscapes/Landis_Landscapes.csproj
+++ b/src/Landscapes/Landis_Landscapes.csproj
@@ -1,73 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BD895506-29A0-539C-7217-DFBDDE6C2424}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Landis.Landscapes</RootNamespace>
     <AssemblyName>Landis.Landscapes</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\build\Debug\</OutputPath>
-    <BaseIntermediateOutputPath>obj\Debug\</BaseIntermediateOutputPath>
-    <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\build\Release\</OutputPath>
-    <BaseIntermediateOutputPath>obj\Release\</BaseIntermediateOutputPath>
-    <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
-    <DefineConstants></DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ActiveSiteEnumerator.cs" />
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="DataIndexes\Array2D.cs" />
-    <Compile Include="DataIndexes\Collection.cs" />
-    <Compile Include="DataIndexes\Enumerator.cs" />
-    <Compile Include="EnumeratorBase.cs" />
-    <Compile Include="InputGrid.cs" />
-    <Compile Include="Landscape.cs" />
-    <Compile Include="LandscapeFactory.cs" />
-    <Compile Include="..\SharedAssemblyInfo.cs">
-      <Link>SharedAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="SiteEnumerator.cs" />
-    <Compile Include="SiteVar.cs" />
-    <Compile Include="SiteVarDistinct.cs" />
-    <Compile Include="SiteVarShare.cs" />
-  </ItemGroup>
+    <AssemblyDescription>Landscape data for spatial modeling</AssemblyDescription>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+  </PropertyGroup>  
   <ItemGroup>
     <ProjectReference Include="..\api\Landis_SpatialModeling.csproj">
-      <Project>{BC1BFAE2-A815-2335-9182-B9457D1B89A1}</Project>
-      <Name>Landis_SpatialModeling</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
