--- a/src/api/Landis_SpatialModeling.csproj
+++ b/src/api/Landis_SpatialModeling.csproj
@@ -3,6 +3,6 @@
     <RootNamespace>Landis.SpatialModeling</RootNamespace>
     <AssemblyName>Landis.SpatialModeling</AssemblyName>
     <AssemblyDescription>Library API</AssemblyDescription>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 </Project>
