GDAL-related changes
Changed gdal_csharp.dll reference to Gdal.Core nuget package reference. Removed unneeded GDAL windows binaries. Removed build artifacts in obj directories.

--- a/src/RasterIO.Gdal/Landis_RasterIO_Gdal.csproj
+++ b/src/RasterIO.Gdal/Landis_RasterIO_Gdal.csproj
@@ -6,14 +6,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="gdal_csharp">
-      <HintPath>..\..\GDAL\managed\gdal_csharp.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\api\Landis_SpatialModeling.csproj">
     </ProjectReference>
     <ProjectReference Include="..\RasterIO\Landis_RasterIO.csproj">
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Gdal.Core" Version="1.0.0" />
   </ItemGroup>
 </Project>
